force-app/main/default/objects/Storefront__c/Storefront__c.object-meta.xml
<CustomObject>
    <label>Storefront</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Storefront</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storefronts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>