force-app/main/default/objects/Storefront__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address</description>
    <inlineHelpText>Address</inlineHelpText>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>