force-app/main/default/objects/Storefront__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Broker</description>
    <inlineHelpText>Broker</inlineHelpText>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storefronts</relationshipLabel>
    <relationshipName>Storefronts</relationshipName>
    <type>Lookup</type>
</CustomField>