force-app/main/default/objects/Storefront__c/fields/Business_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Business_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Tenant</description>
    <inlineHelpText>Business Tenant</inlineHelpText>
    <label>Business (Tenant)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Storefronts</relationshipLabel>
    <relationshipName>Storefronts</relationshipName>
    <type>Lookup</type>
</CustomField>