force-app/main/default/objects/Storefront__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location</description>
    <inlineHelpText>Location</inlineHelpText>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>