force-app/main/default/objects/Storefront__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main Contact</description>
    <inlineHelpText>Main Contact</inlineHelpText>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storefronts (Main Contact)</relationshipLabel>
    <relationshipName>Storefronts_Main_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>