force-app/main/default/objects/Storefront__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <description>Occupancy</description>
    <inlineHelpText>Occupancy</inlineHelpText>
    <label>Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupancy</valueSetName>
    </valueSet>
</CustomField>