force-app/main/default/objects/Storefront__c/fields/Occupancy_Note__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Note__c</fullName>
    <description>Occupancy Note</description>
    <inlineHelpText>Occupancy Note</inlineHelpText>
    <label>Occupancy Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>