force-app/main/default/objects/Storefront__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner</description>
    <inlineHelpText>Owner</inlineHelpText>
    <label>Store Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storefronts (Owner)</relationshipLabel>
    <relationshipName>Storefronts_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>