force-app/main/default/objects/Storefront__c/fields/Parcel__c.field-meta.xml
<CustomField>
    <fullName>Parcel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parcel</description>
    <inlineHelpText>Parcel</inlineHelpText>
    <label>Parcel</label>
    <referenceTo>Parcel__c</referenceTo>
    <relationshipLabel>Storefronts</relationshipLabel>
    <relationshipName>Storefronts_Parcel</relationshipName>
    <type>Lookup</type>
</CustomField>