force-app/main/default/objects/Storefront__c/fields/Parcel_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parcel Owner</description>
    <inlineHelpText>Parcel Owner</inlineHelpText>
    <label>Parcel Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storefronts (Parcel Owner)</relationshipLabel>
    <relationshipName>Storefronts_Parcel_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>