force-app/main/default/objects/Storefront__c/fields/Price_per_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sq_ft__c</fullName>
    <description>Price per sq ft</description>
    <inlineHelpText>Price per sq ft</inlineHelpText>
    <label>Price per sq ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>