force-app/main/default/objects/Storefront__c/fields/Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property Manager</description>
    <inlineHelpText>Property Manager</inlineHelpText>
    <label>Property Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Storefronts (Property Manager)</relationshipLabel>
    <relationshipName>Propert_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>