force-app/main/default/objects/Storefront__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <description>Square Footage</description>
    <inlineHelpText>Square Footage</inlineHelpText>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>