force-app/main/default/objects/Storefront__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <inlineHelpText>State</inlineHelpText>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>