force-app/main/default/objects/Storefront__c/fields/Vacant__c.field-meta.xml
<CustomField>
    <fullName>Vacant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vacant</description>
    <inlineHelpText>Vacant</inlineHelpText>
    <label>Vacant?</label>
    <type>Checkbox</type>
</CustomField>