force-app/main/default/objects/Storefront__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>Zip</description>
    <inlineHelpText>Zip</inlineHelpText>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>