force-app/main/default/objects/Storefront__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Address__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Occupancy__c</columns>
    <columns>Property_Manager__c</columns>
    <columns>Parcel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>